feat: add api /api/admin/users/{id}
